--- a/.config/tmuxinator/core.yml
+++ b/.config/tmuxinator/core.yml
@@ -15,6 +15,7 @@ windows:
             - clear
             - uvicorn main:app --reload
         - pane3:
+            - open http://localhost:3000/
             - code core.code-workspace
             - clear
             - git status
