--- a/.config/tmuxinator/radreport.yml
+++ b/.config/tmuxinator/radreport.yml
@@ -9,8 +9,8 @@ windows:
       panes:
         - pane1:
             - cd radreport-frontend/
-            - clear
             - nvm use 16
+            - clear
             - npm start
         - pane2:
             - cd radreport-backend/
@@ -25,8 +25,7 @@ windows:
       layout: even-horizontal
       panes:
         - pane1:
-            - clear
-            - redis-server;
+            - killall redis-server
+            - redis-server
         - pane2:
-            - clear
             - elasticsearch
